# atsh

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  mini_manifest.md
.github/workflows/: ci.yml
src/: atshc.c  atshd.c  auth.c  auth.h  cfg.rs  crypto.c  crypto.h  main.rs  protocol.h  tunnel.c  tunnel.h
