[package]
name = "notatunneld"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
chacha20poly1305 = "0.10"
rand = "0.8"
rsa = { version = "0.9", features = ["std", "sha2"] }
pkcs1 = "0.7"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
portable-pty = "0.8"
